Commit from Hack Club Spaces

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>This is usagi. He likes to eat and scream.</p>
     <img src='https://4kwallpapers.com/images/wallpapers/usagi-chiikawa-1920x1200-15896.jpg'/>
     <p>just like me fr</p>
-    <p>i love food</p>
+    <p>i love food ԅ( ͒ ۝ ͒ )ᕤ</p>
         <img src='https://i.pinimg.com/736x/6c/0a/05/6c0a05a88d4dc79a696fc9a3c6aaba30.jpg'/>
 
 </body>
